<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/background_linear_layout">

    <LinearLayout
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:padding="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/observacoes"
            android:textSize="16sp"
            android:layout_gravity="center_vertical" />

    </LinearLayout>

    <EditText
        android:id="@+id/dialog_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:paddingTop="20dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/accent"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <Button
            android:id="@+id/dialog_cancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/sair"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/dialog_ok"
            android:layout_toStartOf="@+id/dialog_ok"
            android:background="@drawable/button"
            android:textColor="@color/accent" />

        <Button
            android:id="@+id/dialog_ok"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/button"
            android:text="@string/salvar"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textColor="@color/accent" />
    </RelativeLayout>
</LinearLayout>